--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.6",
     "formik": "^2.2.9",
+    "modern-normalize": "^1.1.0",
     "nanoid": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11"
